COMPASS-2495: Update Plugin dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The MongoDB GUI",
   "homepage": "https://compass.mongodb.com",
   "version": "1.15.0-dev",
-  "apiVersion": "1.0.0",
+  "apiVersion": "2.0.0",
   "main": "src/main.js",
   "author": {
     "name": "MongoDB Inc",
@@ -40,7 +40,6 @@
           "plugins": [
             "node_modules/@mongodb-js/compass-aggregations",
             "node_modules/@mongodb-js/compass-crud",
-            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-collection-stats",
             "node_modules/@mongodb-js/compass-connect",
             "node_modules/@mongodb-js/compass-auth-kerberos",
@@ -48,9 +47,10 @@
             "node_modules/@mongodb-js/compass-auth-x509",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
-            "node_modules/@mongodb-js/compass-query-history",
-            "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-instance",
+            "node_modules/@mongodb-js/compass-plugin-info",
+            "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
@@ -74,7 +74,7 @@
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-license",
             "node_modules/@mongodb-js/compass-query-history",
-            "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-server-version",
             "node_modules/@mongodb-js/compass-ssh-tunnel-status",
@@ -102,7 +102,7 @@
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-history",
-            "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
@@ -131,7 +131,7 @@
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-query-history",
-            "node_modules/@mongodb-js/compass-security",
+            "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
@@ -203,31 +203,32 @@
     "test-functional": "npm test -- --functional",
     "test-release": "npm test -- --release",
     "upload": "hadron-build upload",
-    "evergreen-expansions": "hadron-build info --format=yaml --flatten > expansions.yml"
+    "evergreen-expansions": "hadron-build info --format=yaml --flatten > expansions.yml",
+    "jsx": "babel ./src --out-dir ./lib --presets react"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^0.2.8",
-    "@mongodb-js/compass-auth-kerberos": "^0.1.0",
-    "@mongodb-js/compass-auth-ldap": "^0.1.0",
-    "@mongodb-js/compass-auth-x509": "^0.1.0",
-    "@mongodb-js/compass-collection-stats": "^2.0.3",
-    "@mongodb-js/compass-connect": "^2.4.0",
-    "@mongodb-js/compass-crud": "^4.1.2",
-    "@mongodb-js/compass-deployment-awareness": "^5.1.1",
-    "@mongodb-js/compass-document-validation": "^7.3.0",
-    "@mongodb-js/compass-import-export": "^0.1.2",
-    "@mongodb-js/compass-instance": "^0.0.2",
-    "@mongodb-js/compass-license": "^0.1.1",
-    "@mongodb-js/compass-query-history": "^2.2.2",
-    "@mongodb-js/compass-security": "^0.1.0",
-    "@mongodb-js/compass-server-version": "^1.1.1",
-    "@mongodb-js/compass-serverstats": "^11.1.0",
-    "@mongodb-js/compass-ssh-tunnel-status": "^1.1.1",
-    "@mongodb-js/compass-status": "^2.1.1",
+    "@mongodb-js/compass-aggregations": "^1.1.1",
+    "@mongodb-js/compass-auth-kerberos": "^1.0.1",
+    "@mongodb-js/compass-auth-ldap": "^1.0.1",
+    "@mongodb-js/compass-auth-x509": "^1.0.1",
+    "@mongodb-js/compass-collection-stats": "^3.0.0",
+    "@mongodb-js/compass-connect": "^3.0.0",
+    "@mongodb-js/compass-crud": "^5.1.0",
+    "@mongodb-js/compass-deployment-awareness": "^6.0.0",
+    "@mongodb-js/compass-document-validation": "^8.0.0",
+    "@mongodb-js/compass-import-export": "^1.0.0",
+    "@mongodb-js/compass-instance": "^1.0.0",
+    "@mongodb-js/compass-license": "^1.0.0",
+    "@mongodb-js/compass-query-history": "^3.0.0",
+    "@mongodb-js/compass-plugin-info": "^1.0.0",
+    "@mongodb-js/compass-server-version": "^2.0.0",
+    "@mongodb-js/compass-serverstats": "^12.0.1",
+    "@mongodb-js/compass-ssh-tunnel-status": "^2.0.0",
+    "@mongodb-js/compass-status": "^2.0.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
@@ -240,16 +241,16 @@
     "async": "^1.5.2",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
     "codemirror-mongodb": "^0.10.2",
-    "d3": "^3.5.6",
-    "d3-flextree": "^1.0.3",
-    "d3-timer": "^1.0.3",
+    "d3": "3.5.17",
+    "d3-flextree": "1.0.3",
+    "d3-timer": "1.0.7",
     "debug": "mongodb-js/debug#v2.2.3",
     "debug-menu": "^0.3.0",
     "detect-coordinates": "^0.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "font-awesome": "^4.7.0",
     "get-object-path": "azer/get-object-path#74eb42de0cfd02c14ffdd18552f295aba723d394",
-    "hadron-app": "^2.2.0",
+    "hadron-app": "^3.0.1",
     "hadron-app-registry": "^7.1.0",
     "hadron-auto-update-manager": "^2.0.0",
     "hadron-compile-cache": "^1.0.1",
@@ -257,9 +258,9 @@
     "hadron-ipc": "^1.0.0",
     "hadron-module-cache": "^0.0.3",
     "hadron-plugin-manager": "^5.3.0",
-    "hadron-react-bson": "^1.4.0",
-    "hadron-react-buttons": "^1.5.0",
-    "hadron-react-components": "^1.14.1",
+    "hadron-react-bson": "^2.0.0",
+    "hadron-react-buttons": "^2.0.0",
+    "hadron-react-components": "^2.0.0",
     "hadron-style-manager": "^0.1.0",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
@@ -295,11 +296,11 @@
     "prop-types": "^15.5.8",
     "qs": "^5.2.0",
     "raf": "^3.1.0",
-    "react": "^15.5.4",
+    "react": "^16.3.2",
     "react-bootstrap": "0.31.0",
     "react-click-outside": "^2.2.0",
     "react-codemirror": "durran/react-codemirror#fix-update",
-    "react-dom": "^15.5.4",
+    "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "react-select": "1.0.0-rc.5",
@@ -319,14 +320,16 @@
     "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.23.0",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
-    "chai-enzyme": "^0.8.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.0",
+    "chai-enzyme": "1.0.0-beta.0",
+    "cheerio": "^1.0.0-rc.2",
     "devtron": "^1.4.0",
-    "electron": "1.8.4",
+    "electron": "2.0.0",
     "electron-devtools-installer": "^2.1.0",
     "electron-rebuild": "^1.6.0",
-    "enzyme": "^2.5.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint-config-mongodb-js": "^2.2.0",
     "hadron-build": "^19.0.2",
     "hadron-spectron": "^1.0.0",
@@ -336,7 +339,6 @@
     "mock-require": "^2.0.1",
     "mongodb-js-precommit": "^0.3.0",
     "mongodb-runner": "^3.6.1",
-    "react-test-renderer": "^15.6.1",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "xvfb-maybe": "^0.1.3"
@@ -345,7 +347,7 @@
     "check"
   ],
   "engines": {
-    "node": "^8.2.1",
+    "node": "^8.9.3",
     "npm": "^5.0.0"
   },
   "bugs": {
