--- a/src/internal-plugins/home/package.json
+++ b/src/internal-plugins/home/package.json
@@ -3,11 +3,8 @@
   "productName": "Compass Home",
   "description": "Home view for Compass as an internal package.",
   "version": "1.0.0",
-  "apiVersion": "1.0.0",
+  "apiVersion": "2.0.0",
   "authors": "MongoDB Inc.",
   "private": true,
-  "main": "./index.js",
-  "dependencies": {
-    "hadron-react-components": "^1.14.0"
-  }
+  "main": "./index.js"
 }
