Update deps, move to react-select-plus

--- a/package.json
+++ b/package.json
@@ -211,24 +211,24 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^1.1.1",
+    "@mongodb-js/compass-aggregations": "^1.1.2",
     "@mongodb-js/compass-auth-kerberos": "^1.0.1",
     "@mongodb-js/compass-auth-ldap": "^1.0.1",
     "@mongodb-js/compass-auth-x509": "^1.0.1",
     "@mongodb-js/compass-collection-stats": "^3.0.0",
     "@mongodb-js/compass-connect": "^3.0.0",
-    "@mongodb-js/compass-crud": "^5.1.0",
+    "@mongodb-js/compass-crud": "^5.1.1",
     "@mongodb-js/compass-deployment-awareness": "^6.0.0",
     "@mongodb-js/compass-document-validation": "^8.0.0",
-    "@mongodb-js/compass-import-export": "^1.0.0",
+    "@mongodb-js/compass-import-export": "^1.0.1",
     "@mongodb-js/compass-instance": "^1.0.0",
     "@mongodb-js/compass-license": "^1.0.0",
-    "@mongodb-js/compass-query-history": "^3.0.0",
+    "@mongodb-js/compass-query-history": "^3.0.1",
     "@mongodb-js/compass-plugin-info": "^1.0.0",
     "@mongodb-js/compass-server-version": "^2.0.0",
     "@mongodb-js/compass-serverstats": "^12.0.1",
     "@mongodb-js/compass-ssh-tunnel-status": "^2.0.0",
-    "@mongodb-js/compass-status": "^2.0.0",
+    "@mongodb-js/compass-status": "^3.0.0",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
@@ -303,7 +303,7 @@
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
-    "react-select": "1.0.0-rc.5",
+    "react-select-plus": "^1.2.0",
     "react-tooltip": "^3.2.6",
     "react-virtualized": "^9.18.5",
     "redux": "^3.7.2",
