--- a/package.json
+++ b/package.json
@@ -211,7 +211,7 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^1.5.0",
+    "@mongodb-js/compass-aggregations": "^1.5.3",
     "@mongodb-js/compass-auth-kerberos": "^1.0.1",
     "@mongodb-js/compass-auth-ldap": "^1.0.1",
     "@mongodb-js/compass-auth-x509": "^1.0.1",
@@ -348,7 +348,7 @@
   ],
   "engines": {
     "node": "^8.9.3",
-    "npm": "^5.0.0"
+    "npm": ">=5.0.0"
   },
   "bugs": {
     "url": "https://docs.mongodb.com/compass/current/#contact",
