COMPASS-2924: Adding elipsis menu to query bar

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-instance",
             "node_modules/@mongodb-js/compass-plugin-info",
+            "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-serverstats",
             "node_modules/@mongodb-js/compass-server-version",
@@ -73,6 +74,7 @@
             "node_modules/@mongodb-js/compass-import-export",
             "node_modules/@mongodb-js/compass-deployment-awareness",
             "node_modules/@mongodb-js/compass-license",
+            "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
@@ -101,6 +103,7 @@
             "node_modules/@mongodb-js/compass-auth-x509",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
@@ -130,6 +133,7 @@
             "node_modules/@mongodb-js/compass-auth-x509",
             "node_modules/@mongodb-js/compass-document-validation",
             "node_modules/@mongodb-js/compass-deployment-awareness",
+            "node_modules/@mongodb-js/compass-query-bar",
             "node_modules/@mongodb-js/compass-query-history",
             "node_modules/@mongodb-js/compass-plugin-info",
             "node_modules/@mongodb-js/compass-instance",
@@ -223,6 +227,7 @@
     "@mongodb-js/compass-import-export": "^1.0.2",
     "@mongodb-js/compass-instance": "^1.0.1",
     "@mongodb-js/compass-license": "^1.0.0",
+    "@mongodb-js/compass-query-bar": "^1.0.1",
     "@mongodb-js/compass-query-history": "^3.0.2",
     "@mongodb-js/compass-plugin-info": "^1.0.0",
     "@mongodb-js/compass-server-version": "^2.0.0",
@@ -240,7 +245,6 @@
     "app-migrations": "mongodb-js/app-migrations#v0.1.2",
     "async": "^1.5.2",
     "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.3.5.tar.gz",
-    "codemirror-mongodb": "^0.10.2",
     "d3": "3.5.17",
     "d3-flextree": "1.0.3",
     "d3-timer": "1.0.7",
@@ -299,7 +303,6 @@
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-click-outside": "^2.2.0",
-    "react-codemirror": "durran/react-codemirror#fix-update",
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
