Remove internal query plugin

--- a/package.json
+++ b/package.json
@@ -227,9 +227,9 @@
     "@mongodb-js/compass-import-export": "^1.0.2",
     "@mongodb-js/compass-instance": "^1.0.1",
     "@mongodb-js/compass-license": "^1.0.0",
+    "@mongodb-js/compass-plugin-info": "^1.0.0",
     "@mongodb-js/compass-query-bar": "^1.0.2",
     "@mongodb-js/compass-query-history": "^3.0.2",
-    "@mongodb-js/compass-plugin-info": "^1.0.0",
     "@mongodb-js/compass-server-version": "^2.0.0",
     "@mongodb-js/compass-serverstats": "^12.0.2",
     "@mongodb-js/compass-ssh-tunnel-status": "^2.0.0",
@@ -289,6 +289,7 @@
     "mongodb-language-model": "^1.2.0",
     "mongodb-ns": "^2.0.0",
     "mongodb-query-parser": "^1.0.1",
+    "mongodb-query-util": "0.0.1",
     "mongodb-schema": "^8.0.1",
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
