--- a/package.json
+++ b/package.json
@@ -219,7 +219,7 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^1.5.23",
+    "@mongodb-js/compass-aggregations": "^1.5.25",
     "@mongodb-js/compass-auth-kerberos": "^1.0.1",
     "@mongodb-js/compass-auth-ldap": "^1.0.1",
     "@mongodb-js/compass-auth-x509": "^1.0.1",
@@ -233,7 +233,7 @@
     "@mongodb-js/compass-instance": "^1.0.1",
     "@mongodb-js/compass-license": "^1.0.0",
     "@mongodb-js/compass-plugin-info": "^1.0.0",
-    "@mongodb-js/compass-query-bar": "^1.0.19",
+    "@mongodb-js/compass-query-bar": "^1.0.21",
     "@mongodb-js/compass-query-history": "^3.0.2",
     "@mongodb-js/compass-server-version": "^2.0.1",
     "@mongodb-js/compass-serverstats": "^12.0.2",
@@ -282,6 +282,10 @@
     "mapbox-gl": "^0.39.1",
     "marky": "^1.2.0",
     "moment": "^2.10.6",
+    "mongodb-ace-autocompleter": "^0.0.17",
+    "mongodb-ace-mode": "^0.0.2",
+    "mongodb-ace-theme": "^0.0.1",
+    "mongodb-ace-theme-query": "^0.0.2",
     "mongodb-collection-model": "^1.0.0",
     "mongodb-connection-model": "^12.2.0",
     "mongodb-data-service": "^12.0.0",
@@ -307,6 +311,7 @@
     "qs": "^5.2.0",
     "raf": "^3.1.0",
     "react": "^16.4.0",
+    "react-ace": "^6.1.1",
     "react-bootstrap": "^0.32.1",
     "react-click-outside": "^2.2.0",
     "react-dom": "^16.4.0",
