force clean npm cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ addons:
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
   - npm i -g npm@5.7.1
+  - npm cache --f clean
   - npm --version
 before_script:
   - export DISPLAY=:99.0
