--- a/package.json
+++ b/package.json
@@ -219,16 +219,16 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^1.6.3",
+    "@mongodb-js/compass-aggregations": "^1.8.0",
     "@mongodb-js/compass-auth-kerberos": "^1.0.1",
     "@mongodb-js/compass-auth-ldap": "^1.0.1",
     "@mongodb-js/compass-auth-x509": "^1.0.1",
     "@mongodb-js/compass-collection-stats": "^3.0.0",
-    "@mongodb-js/compass-connect": "^3.3.2",
+    "@mongodb-js/compass-connect": "^3.4.0",
     "@mongodb-js/compass-crud": "^5.2.1",
-    "@mongodb-js/compass-deployment-awareness": "^6.0.0",
+    "@mongodb-js/compass-deployment-awareness": "^6.1.1",
     "@mongodb-js/compass-document-validation": "^8.0.3",
-    "@mongodb-js/compass-export-to-language": "^2.2.26",
+    "@mongodb-js/compass-export-to-language": "^2.3.0",
     "@mongodb-js/compass-import-export": "^1.0.4",
     "@mongodb-js/compass-instance": "^1.0.1",
     "@mongodb-js/compass-license": "^1.0.0",
@@ -273,7 +273,7 @@
     "hadron-style-manager": "^0.1.0",
     "highlight.js": "^8.9.1",
     "jquery": "^2.1.4",
-    "kerberos": "^0.0.24",
+    "kerberos": "^1.0.0",
     "keytar": "mongodb-js/node-keytar#fdef09013f576b7a257ad768939e827882bccef5",
     "less": "^2.6.1",
     "less-cache": "^0.23.0",
@@ -287,19 +287,20 @@
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-ace-theme-query": "^0.0.2",
     "mongodb-collection-model": "^1.0.0",
-    "mongodb-connection-model": "^12.3.2",
-    "mongodb-data-service": "^12.1.3",
+    "mongodb-connection-model": "^12.4.0",
+    "mongodb-core": "^3.1.3",
+    "mongodb-data-service": "^12.2.0",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.0",
-    "mongodb-index-model": "^2.1.0",
+    "mongodb-index-model": "^2.2.0",
     "mongodb-instance-model": "^7.0.0",
     "mongodb-js-metrics": "^4.2.0",
     "mongodb-language-model": "^1.2.0",
     "mongodb-ns": "^2.0.0",
     "mongodb-query-parser": "^1.0.1",
     "mongodb-query-util": "0.0.1",
-    "mongodb-schema": "^8.1.0",
+    "mongodb-schema": "^8.2.0",
     "mongodb-shell-to-url": "^0.1.0",
     "ms": "^0.7.1",
     "node-notifier": "^4.3.1",
@@ -352,7 +353,7 @@
     "mocha": "^4.1.0",
     "mock-require": "^2.0.1",
     "mongodb-js-precommit": "^0.3.0",
-    "mongodb-runner": "^4.0.0",
+    "mongodb-runner": "^4.1.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "xvfb-maybe": "^0.1.3"
