--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,4 @@ addons:
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
   - npm i -g npm
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - npm run check
-script: npm run test
+script: npm run ci
