Make travis use `npm ci` which is faster than `npm install` for actual CI
- Now that we're on `npm@6`, we can take advantage of https://docs.npmjs.com/cli/ci
- Remove `ci` run script as it conflicts with this new feature (I was ahead of my time...)
- Remove `mongodb-js-fmt` as everyone now uses prettier in their editor's

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,8 @@ addons:
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
   - npm i -g npm
-script: npm run ci
+install:
+  - npm ci
+script:
+  - npm run check
+  - npm test
