--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ before_install:
   - npm i -g npm
 install:
   - npm ci
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3 # give xvfb some time to start
 script:
   - npm run check
   - npm test
