--- a/package.json
+++ b/package.json
@@ -200,10 +200,9 @@
   "scripts": {
     "prestart": "rm -rf .compiled-sources",
     "start": "hadron-build develop",
-    "pretest": "mongodb-runner install && mongodb-runner start --port 27017",
+    "pretest": "mongodb-runner start --port 27017",
     "test": "hadron-build test",
     "posttest": "mongodb-runner stop --port 27017",
-    "postinstall": "./node_modules/.bin/electron-rebuild",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
