Backport COMPASS-3118: Fix orphaned windows (#1550)
* COMPASS-3118: Fix orphaned windows

* :zap: Make travis use latest npm

* Try rebuilding entire package-lock for travis

* COMPASS-3118: Can no longer repro exception

* Shouldn't need to flush npm cache anymore

* COMPASS-3118: Handle potential race of COMPASS-3101

* debugging travis

* COMPASS-3113: Use xvfb-maybe instead of travis before_script

* Make travis use `npm ci` which is faster than `npm install` for actual CI

- Now that we're on `npm@6`, we can take advantage of https://docs.npmjs.com/cli/ci
- Remove `ci` run script as it conflicts with this new feature (I was ahead of my time...)
- Remove `mongodb-js-fmt` as everyone now uses prettier in their editor's

* debugging travis

* :zap: Cache npm build cache

* Revert "COMPASS-3113: Use xvfb-maybe instead of travis before_script"

This reverts commit d39c6cbd877f502f575c157a19f1054adce6df9f.

* Fix databases test

* Debugging test failures

* Fix Windows on Evergreen to use npm@6

--- a/package.json
+++ b/package.json
@@ -193,15 +193,12 @@
   "scripts": {
     "prestart": "rm -rf .compiled-sources",
     "start": "hadron-build develop",
-    "pretest": "mongodb-runner install && mongodb-runner start --port 27017",
+    "pretest": "mongodb-runner start --port 27017",
     "test": "hadron-build test",
     "posttest": "mongodb-runner stop --port 27017",
-    "postinstall": "./node_modules/.bin/electron-rebuild",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
-    "ci": "npm run check && npm run test",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
-    "fmt": "mongodb-js-fmt 'src/**/*{.js,.jsx}' 'test/**/*.js'",
     "release": "hadron-build release",
     "test-unit": "npm test -- --unit",
     "test-enzyme": "npm test -- --enzyme",
@@ -264,7 +261,7 @@
     "hadron-auto-update-manager": "^2.0.0",
     "hadron-compile-cache": "^1.0.1",
     "hadron-document": "^4.0.0",
-    "hadron-ipc": "^1.0.0",
+    "hadron-ipc": "^1.1.0",
     "hadron-module-cache": "^0.0.3",
     "hadron-plugin-manager": "^5.3.0",
     "hadron-react-bson": "^2.0.0",
