COMPASS-3118: Fix orphaned windows (#1550)
* COMPASS-3118: Fix orphaned windows

* :zap: Make travis use latest npm

* Try rebuilding entire package-lock for travis

* COMPASS-3118: Can no longer repro exception

* Shouldn't need to flush npm cache anymore

* COMPASS-3118: Handle potential race of COMPASS-3101

* debugging travis

* COMPASS-3113: Use xvfb-maybe instead of travis before_script

* Make travis use `npm ci` which is faster than `npm install` for actual CI

- Now that we're on `npm@6`, we can take advantage of https://docs.npmjs.com/cli/ci
- Remove `ci` run script as it conflicts with this new feature (I was ahead of my time...)
- Remove `mongodb-js-fmt` as everyone now uses prettier in their editor's

* debugging travis

* :zap: Cache npm build cache

* Revert "COMPASS-3113: Use xvfb-maybe instead of travis before_script"

This reverts commit d39c6cbd877f502f575c157a19f1054adce6df9f.

* Fix databases test

* Debugging test failures

* Fix Windows on Evergreen to use npm@6

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,16 @@ addons:
       - libstdc++6
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
-  - npm i -g npm@5.7.1
-  - npm cache --f clean
-  - npm --version
+  - npm i -g npm
+install:
+  - npm ci
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - sleep 3 # give xvfb some time to start
+script:
   - npm run check
-script: npm run test
+  - npm test
+cache:
+  directories:
+    - '$HOME/.npm'
