--- a/package.json
+++ b/package.json
@@ -200,15 +200,12 @@
   "scripts": {
     "prestart": "rm -rf .compiled-sources",
     "start": "hadron-build develop",
-    "pretest": "mongodb-runner install && mongodb-runner start --port 27017",
+    "pretest": "mongodb-runner start --port 27017",
     "test": "hadron-build test",
     "posttest": "mongodb-runner stop --port 27017",
-    "postinstall": "./node_modules/.bin/electron-rebuild",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
-    "ci": "npm run check && npm run test",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
-    "fmt": "mongodb-js-fmt 'src/**/*{.js,.jsx}' 'test/**/*.js'",
     "release": "hadron-build release",
     "test-unit": "npm test -- --unit",
     "test-enzyme": "npm test -- --enzyme",
@@ -273,7 +270,7 @@
     "hadron-auto-update-manager": "^2.0.0",
     "hadron-compile-cache": "^1.0.1",
     "hadron-document": "^4.0.0",
-    "hadron-ipc": "^1.0.0",
+    "hadron-ipc": "^1.1.0",
     "hadron-module-cache": "^0.0.3",
     "hadron-plugin-manager": "^5.3.0",
     "hadron-react-bson": "^2.0.0",
@@ -350,7 +347,7 @@
     "cheerio": "^1.0.0-rc.2",
     "devtron": "^1.4.0",
     "electron": "2.0.7",
-    "electron-devtools-installer": "^2.1.0",
+    "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.8.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
